[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-web = "3"
# serde_json is just for the example, not required in general
serde_json = "1.0"
actix-multipart = "0.3"
futures-util = "0.3"
sanitize-filename = "0.2"
r2d2 = "0.8.9"
r2d2_mysql="*"
mysql = "*"
dotenv = "0.15.0"
actix-cors="0.5.4"
regex = "1"